--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "discord.js": "^13.2.0",
+    "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "winston": "^3.3.3"
   },
