--- a/config.json
+++ b/config.json
@@ -3,5 +3,9 @@
   "author": "Windows95",
   "sudos": ["330539533546422272"],
   "production": false,
-  "testServer": "895165587188224010"
+  "testServer": "895165587188224010",
+  "theme": {
+    "main": "#007fff",
+    "secondary": "#90EE90"
+  }
 }
