--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
+    "chalk": "^4.1.2",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
