--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
+    "human-format": "^0.11.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
