--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "canvas": "^2.8.0",
     "chalk": "^4.1.2",
+    "chartjs-node-canvas": "^3.2.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "human-format": "^0.11.0",
+    "request": "^2.88.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
-    "@types/node": "^16.10.3"
+    "@types/node": "^16.10.3",
+    "@types/request": "^2.48.7"
   }
 }
