--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "npx rimraf ./build",
+    "build": "tsc -p tsconfig.json",
+    "lint": "npx prettier ./src --w",
+    "start": "node ./build/src"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.4",
     "@types/node": "^16.10.3",
-    "@types/request": "^2.48.7"
+    "@types/request": "^2.48.7",
+    "rimraf": "^3.0.2"
   }
 }
