--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "name": "Lemon Tools",
   "author": "Windows95",
   "sudos": ["330539533546422272"],
-  "production": false,
+  "production": true,
   "testServer": "895165587188224010",
   "theme": {
     "main": "#FEF250",
