--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/glob": "^7.1.4",
     "@types/node": "^16.10.3",
     "@types/request": "^2.48.7",
+    "eslint": "^8.0.1",
     "rimraf": "^3.0.2"
   }
 }
