--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "npx rimraf ./coverage",
+    "test": "npx jest --coverage",
     "prebuild": "npx rimraf ./build",
     "build": "tsc -p tsconfig.json",
     "lint": "npx prettier ./src --w",
@@ -29,9 +30,12 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/request": "^2.48.7",
     "eslint": "^8.0.1",
-    "rimraf": "^3.0.2"
+    "jest": "^27.2.5",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.5"
   }
 }
