--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest --coverage",
     "prebuild": "npx rimraf ./build",
     "build": "tsc -p tsconfig.json",
     "lint": "npx prettier ./src --w",
