--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,10 @@ jobs:
       # Install npm packages
       - name: Install npm packages
         run: npm install
+
+      # Install ts-jest
+      - name: Install ts-jest
+        run: npm i -D ts-jest
       # Runs a single command using the runners shell
       - name: Run Jest Tests with coverage report
         run: npx jest
