--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "npx rimraf ./build",
     "build": "tsc -p tsconfig.json",
     "lint": "npx prettier ./src --w",
-    "start": "node ./build/src"
+    "start": "node ./build/src",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
     "@types/node": "^16.10.3",
     "@types/request": "^2.48.7",
     "eslint": "^8.0.1",
+    "husky": "^7.0.2",
     "jest": "^27.2.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5"
