--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "npx rimraf ./coverage",
     "test": "npx jest --coverage",
     "prebuild": "npx rimraf ./build",
-    "build": "tsc -p tsconfig.json",
+    "build": "npx tsc -p tsconfig.json",
     "lint": "npx prettier ./src --w",
     "start": "node ./build/src",
     "prepare": "husky install",
