docs(env.example): Add missing NASA_API key

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ CLIENT_ID=0000000000000
 NYT_API=NYT_API_KEY
 # NewsAPI key (see https://newsapi.org)
 NEWS_API=you-know-the-dril
+# NASA Open Data API Key (see https://api.nasa.gov)
+NASA_API=...
