--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.0.1",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
+    "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5"
   }
