--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@types/node-fetch": "^3.0.3",
     "canvas": "^2.8.0",
     "chalk": "^4.1.2",
     "chartjs-node-canvas": "^3.2.0",
@@ -26,6 +27,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
+    "got": "^11.8.2",
     "human-format": "^0.11.0",
     "mathjs": "^9.5.1",
     "request": "^2.88.2",
