--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@types/ms": "^0.7.31",
     "@types/node-fetch": "^3.0.3",
     "canvas": "^2.8.0",
     "chalk": "^4.1.2",
     "chartjs-node-canvas": "^3.2.0",
     "discord-api-types": "^0.23.1",
+    "discord-giveaways": "^5.0.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
     "got": "^11.8.2",
     "human-format": "^0.11.0",
     "mathjs": "^9.5.1",
+    "mongoose": "^6.0.11",
+    "ms": "^2.1.3",
     "request": "^2.88.2",
     "winston": "^3.3.3"
   },
