fix(env): Added missing env variable to env.exampel

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ NYT_API=NYT_API_KEY
 NEWS_API=you-know-the-dril
 # NASA Open Data API Key (see https://api.nasa.gov)
 NASA_API=...
+# MongoDB URI (required for giveaways and other data)
+MONGOOSE_URI=mongodb://...
