--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,3 +4,4 @@ description: An open source Discord Bot with a few tricks up it's sleeves!
 timezone: Australia/Sydney
 github:
   repository_url: //github.com/cooljim/lemontools
+show_downloads: true
