--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "canvas": "^2.8.0",
     "chalk": "^4.1.2",
     "chartjs-node-canvas": "^3.2.0",
+    "deepmerge": "^4.2.2",
     "discord-api-types": "^0.23.1",
-    "discord-giveaways": "^5.0.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
@@ -35,6 +35,7 @@
     "mongoose": "^6.0.11",
     "ms": "^2.1.3",
     "request": "^2.88.2",
+    "serialize-javascript": "^6.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/request": "^2.48.7",
+    "@types/serialize-javascript": "^5.0.1",
     "eslint": "^8.0.1",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
