--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "lib": ["DOM", "ES2021"],
+    "allowJs": true,
 
     /* Experimental Options */
     "experimentalDecorators": true,
