--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@jpbberry/typed-emitter": "^1.2.1",
+    "@top-gg/sdk": "^3.1.2",
     "@types/ms": "^0.7.31",
     "@types/node-fetch": "^3.0.3",
     "axios": "^0.24.0",
@@ -38,6 +40,7 @@
     "ms": "^2.1.3",
     "request": "^2.88.2",
     "serialize-javascript": "^6.0.0",
+    "typescript": "^4.4.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
