Added top.gg reporting

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ NEWS_API=you-know-the-dril
 NASA_API=...
 # MongoDB URI (required for giveaways and other data)
 MONGOOSE_URI=mongodb://...
+# TopGG Token (If your bot is listed on top.gg to post stats to it)
+TOPGG=topgg token here
