env(example): updated example

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ NASA_API=...
 MONGOOSE_URI=mongodb://...
 # TopGG Token (If your bot is listed on top.gg to post stats to it)
 TOPGG=topgg token here
+# Influx DB token (for stats)
+INFLUX=
