--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@influxdata/influxdb-client": "^1.20.0",
     "@jpbberry/typed-emitter": "^1.2.1",
     "@top-gg/sdk": "^3.1.2",
     "@types/ms": "^0.7.31",
