--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mathjs": "^9.5.1",
     "mongoose": "^6.0.11",
     "ms": "^2.1.3",
+    "node-os-utils": "^1.3.5",
     "request": "^2.88.2",
     "serialize-javascript": "^6.0.0",
     "typescript": "^4.4.4",
@@ -49,6 +50,7 @@
     "@types/he": "^1.1.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
+    "@types/node-os-utils": "^1.2.0",
     "@types/request": "^2.48.7",
     "@types/serialize-javascript": "^5.0.1",
     "eslint": "^8.0.1",
