--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "discord.js": "^13.3.1",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
+    "mathjs": "^10.0.1",
     "winston": "^3.3.3"
   },
   "scripts": {
