--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "chalk": "4.x.x",
     "discord.js": "^13.3.1",
     "glob": "^7.2.0",
+    "got": "^12.0.0",
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "winston": "^3.3.3"
