--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "chart.js": "^3.7.0",
     "chartjs-node-canvas": "^4.1.5",
     "cheerio": "^1.0.0-rc.10",
+    "discord-giveaways": "^5.0.1",
     "discord.js": "^13.3.1",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
+    "mongoose": "^6.1.4",
     "winston": "^3.3.3"
   },
   "scripts": {
