fix(docs): update old .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-ENVIRONMENT=Choose one of debug (for debugging), dev (for development) and production (for production)
-BOT_TOKEN=Put your bot token here ("" not required)
+ENVIRONMENT=debug, dev or production
+BOT_TOKEN=...
+NASA=NASA API token
+MONGO=MongoDB URI (w/ username + password)
+NYT=New York Times API Key
+ORG=InfluxDB Organisation
+BUCKET=InfluxDB Bucket
+INFLUX=InfluxDB API Key
+INFLUX_URL=InfluxDB URL
