--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "mongoose": "^6.1.4",
+    "typescript": "^4.5.5",
     "winston": "^3.3.3"
   },
   "scripts": {
     "prebuild": "ynpx rimraf build",
     "prebuild:w": "ynpx rimraf build",
-    "build": "tsc -p tsconfig.json",
-    "build:w": "tsc -p tsconfig.json --watch"
+    "build": "ynpx tsc -p tsconfig.json",
+    "build:w": "ynpx tsc -p tsconfig.json --watch"
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
