--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "chart.js": "^3.7.0",
     "chartjs-node-canvas": "^4.1.5",
     "cheerio": "^1.0.0-rc.10",
+    "deepmerge": "^4.2.2",
     "discord.js": "^13.3.1",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "mongoose": "^6.1.4",
+    "serialize-javascript": "^6.0.0",
     "typescript": "^4.5.5",
     "winston": "^3.3.3"
   },
