--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "mongoose": "^6.1.4",
     "serialize-javascript": "^6.0.0",
     "typescript": "^4.5.5",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
-    "prebuild": "ynpx rimraf build",
-    "prebuild:w": "ynpx rimraf build",
-    "build": "ynpx tsc -p tsconfig.json",
-    "build:w": "ynpx tsc -p tsconfig.json --watch",
+    "prebuild": "yarn rimraf build",
+    "prebuild:w": "yarn rimraf build",
+    "build": "yarn tsc -p tsconfig.json",
+    "build:w": "yarn tsc -p tsconfig.json --watch",
     "start": "node ./build"
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "ynpx": "^2.1.1"
+    "@types/node": "^8.0.27",
+    "ts-node": "^8.0.0",
+    "ts-node-dev": "^1.0.0",
+    "tslint": "^5.16.0"
   }
 }
