--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "mongoose": "^6.1.4",
+    "rimraf": "^3.0.2",
     "serialize-javascript": "^6.0.0",
     "typescript": "^4.5.5",
-    "winston": "^3.3.3",
-    "rimraf": "^3.0.2"
+    "winston": "^3.3.3"
   },
   "scripts": {
     "prebuild": "yarn rimraf build",
