--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 bot:
   name: &botname Lemon Tools
-  author: &author Windows95
+  author: &author Compositr
   sudos: ["330539533546422272"]
   description: >-
     Lemon Tools is multipurpose bot, with many features not provided by other bots, 
