--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
     "mongoose": "^6.1.4",
+    "punycode": "^2.1.1",
     "rimraf": "^3.0.2",
     "serialize-javascript": "^6.0.0",
     "typescript": "^4.5.5",
