--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "ts-node": "^8.0.0",
     "ts-node-dev": "^1.0.0",
     "tslint": "^5.16.0"
+  },
+  "engines": {
+    "node": "^16.14.0"
   }
 }
