--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ node_modules
 !.env.example
 *.log
 _site
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
