--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "punycode": "^2.1.1",
     "rimraf": "^3.0.2",
     "serialize-javascript": "^6.0.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "winston": "^3.3.3"
   },
