--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "lemontools",
+  "version": "2.2.1", 
   "dependencies": {
     "@influxdata/influxdb-client": "^1.21.0",
     "@types/js-yaml": "^4.0.5",
