--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "name": "lemontools",
+  "version": "2.2.1", 
   "dependencies": {
     "@influxdata/influxdb-client": "^1.21.0",
     "@types/js-yaml": "^4.0.5",
     "axios": "^0.24.0",
-    "canvas": "^2.8.0",
+    "canvas": "^2.9.0",
     "chalk": "4.x.x",
     "chart.js": "^3.7.0",
     "chartjs-node-canvas": "^4.1.5",
@@ -17,6 +19,7 @@
     "punycode": "^2.1.1",
     "rimraf": "^3.0.2",
     "serialize-javascript": "^6.0.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "winston": "^3.3.3"
   },
@@ -29,12 +32,13 @@
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "@types/node": "^8.0.27",
+    "@types/node": "^17.0.21",
     "ts-node": "^8.0.0",
     "ts-node-dev": "^1.0.0",
     "tslint": "^5.16.0"
   },
   "engines": {
     "node": "^16.14.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
