feat(v3): last purge
Signed-off-by: Jim <jimke2000@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "skipDefaultLibCheck": true,
     "resolveJsonModule": true,
     "importHelpers": true,
-    "allowJs": true
+    "allowJs": true,
+    "rootDir": "src"
   },
   "include": ["src", "environment.d.ts"],
   "exclude": ["node_modules"]
