--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "3.0.0",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.21.0",
-    "@types/js-yaml": "^4.0.5",
     "axios": "^0.24.0",
     "canvas": "^2.9.0",
     "capture-website": "^2.3.0",
@@ -13,6 +12,7 @@
     "cheerio": "^1.0.0-rc.10",
     "deepmerge": "^4.2.2",
     "discord.js": "^13.3.1",
+    "express": "^4.17.3",
     "glob": "^7.2.0",
     "js-yaml": "^4.1.0",
     "mathjs": "^10.0.1",
@@ -32,8 +32,10 @@
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "ts-node": "^8.0.0",
+    "@types/js-yaml": "^4.0.5",
     "ts-node-dev": "^1.0.0",
     "tslint": "^5.16.0"
   },
