--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.21.0",
     "axios": "^0.24.0",
+    "body-parser": "^1.20.0",
     "canvas": "^2.9.0",
     "capture-website": "^2.3.0",
     "chalk": "4.x.x",
@@ -33,9 +34,9 @@
   "license": "GPL-3.0-only",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.21",
     "ts-node": "^8.0.0",
-    "@types/js-yaml": "^4.0.5",
     "ts-node-dev": "^1.0.0",
     "tslint": "^5.16.0"
   },
