--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "GPL-3.0-only",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/glob": "^7.2.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.21",
     "ts-node": "^8.0.0",
