--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "module": "commonjs",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "importsNotUsedAsValues": "error"
   },
   "include": ["src/**/*", "src/*"],
   "exclude": ["node_modules", "build"]
