--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "discord.js": "^13.6.0",
     "express": "^4.18.0",
     "i18n": "^0.14.2",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "17.9.0"
