--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.1",
     "discord.js": "^13.6.0",
     "express": "^4.18.0",
+    "glob": "^8.0.1",
     "i18n": "^0.14.2",
     "ms": "^2.1.3",
     "uuid": "^8.3.2"
@@ -22,6 +23,7 @@
     "node": "17.9.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/uuid": "^8.3.4"
   }
 }
