--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "glob": "^8.0.1",
     "i18n": "^0.14.2",
     "ms": "^2.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.7.2"
   },
   "engines": {
     "node": "17.9.0"
