--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "noImplicitThis": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "importsNotUsedAsValues": "error"
+    "importsNotUsedAsValues": "error",
+    "esModuleInterop": true
   },
   "include": ["src/**/*", "src/*"],
   "exclude": ["node_modules", "build"]
