--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.1",
     "discord.js": "^13.6.0",
     "express": "^4.18.0",
+    "flatted": "^3.2.5",
     "glob": "^8.0.1",
     "i18n": "^0.14.2",
     "ms": "^2.1.3",
