--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "axios": "^0.27.1",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "flatted": "^3.2.5",
     "glob": "^8.0.1",
-    "i18n": "^0.14.2",
     "ms": "^2.1.3",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "typescript": "^4.7.2"
   }
 }
