--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@types/luxon": "^2.3.2",
     "axios": "^0.27.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "flatted": "^3.2.5",
     "glob": "^8.0.1",
+    "luxon": "^2.4.0",
     "ms": "^2.1.3",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/ms": "^0.7.31",
     "@types/uuid": "^8.3.4",
     "typescript": "^4.7.2"
   }
