--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flatted": "^3.2.5",
     "glob": "^8.0.1",
     "luxon": "^2.4.0",
+    "mathjs": "^10.6.1",
     "ms": "^2.1.3",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
