--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@types/luxon": "^2.3.2",
     "axios": "^0.27.1",
+    "canvas": "^2.9.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "flatted": "^3.2.5",
     "glob": "^8.0.1",
+    "image-size": "^1.0.1",
     "luxon": "^2.4.0",
     "mathjs": "^10.6.1",
     "ms": "^2.1.3",
