--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "copy": "cp -r src/asset/**/ build/asset"
   },
   "dependencies": {
-    "@types/luxon": "^2.3.2",
     "axios": "^0.27.1",
     "canvas": "^2.9.1",
     "discord.js": "^13.8.0",
@@ -35,6 +34,7 @@
     "@types/glob": "^7.2.0",
     "@types/ms": "^0.7.31",
     "@types/uuid": "^8.3.4",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@types/luxon": "^2.3.2"
   }
 }
